exports[`creates alarms when alarm and warning actions provided (happy path) 1`] = `
{
  "Resources": {
    "AlarmTopicD01E77F9": {
      "Type": "AWS::SNS::Topic",
    },
    "ServiceWithAlarmsAlbTargets5xxAlarmB4707090": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "Load balancer received too many 5XX responses from target(s) in ECS service 'example-service-alarms'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "load-balancer-placeholder",
          },
          {
            "Name": "TargetGroup",
            "Value": {
              "Fn::GetAtt": [
                "ServiceWithAlarmsTargetGroup749DF9C8",
                "TargetGroupFullName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "HTTPCode_Target_5XX_Count",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceWithAlarmsAlbTargetsSingle5xxAlarmC1290A5E": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Ref": "WarningTopicE070F32B",
          },
        ],
        "AlarmDescription": "Load balancer received a 5XX response from target(s) in ECS service 'example-service-alarms'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "load-balancer-placeholder",
          },
          {
            "Name": "TargetGroup",
            "Value": {
              "Fn::GetAtt": [
                "ServiceWithAlarmsTargetGroup749DF9C8",
                "TargetGroupFullName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HTTPCode_Target_5XX_Count",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": [
          {
            "Ref": "WarningTopicE070F32B",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceWithAlarmsConfigExamplePlainTextParameter8AFE2A31": {
      "Properties": {
        "Name": "/liflig-cdk/Stack2/c8267a0b2fd307ab19027a1d7aeaf66a99e5857576/parameters/config/ExamplePlainTextParameter",
        "Type": "String",
        "Value": "ExamplePlainTextParameter",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "ServiceWithAlarmsConnectionAlarmAE928DBD": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmDescription": "Load balancer is failing to connect to target(s) in ECS service 'example-service-alarms'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "load-balancer-placeholder",
          },
          {
            "Name": "TargetGroup",
            "Value": {
              "Fn::GetAtt": [
                "ServiceWithAlarmsTargetGroup749DF9C8",
                "TargetGroupFullName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "TargetConnectionErrorCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceWithAlarmsErrorLogAlarm204BB19D": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarningTopicE070F32B",
          },
        ],
        "AlarmDescription": "example-service-alarms logged an error",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "stack/Stack2/example-service-alarms/Errors",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceWithAlarmsHealthAlarm243B8FC5": {
      "Properties": {
        "AlarmDescription": "There are no healthy target(s) in ECS service 'example-service-alarms'.",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "load-balancer-placeholder",
          },
          {
            "Name": "TargetGroup",
            "Value": {
              "Fn::GetAtt": [
                "ServiceWithAlarmsTargetGroup749DF9C8",
                "TargetGroupFullName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HealthyHostCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Minimum",
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceWithAlarmsLogGroup4EAFA347": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ServiceWithAlarmsLogGroupErrorMetricFilter2A404051": {
      "Properties": {
        "FilterPattern": "{ ($.level = "ERROR") || ($.level = "FATAL") || ($.requestInfo.status.code = "INTERNAL_SERVER_ERROR") }",
        "LogGroupName": {
          "Ref": "ServiceWithAlarmsLogGroup4EAFA347",
        },
        "MetricTransformations": [
          {
            "MetricName": "Errors",
            "MetricNamespace": "stack/Stack2/example-service-alarms/Errors",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "ServiceWithAlarmsSecurityGroup6100FE5F": {
      "Properties": {
        "GroupDescription": "Stack2/ServiceWithAlarms/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Fn::ImportValue": "SupportStack2:ExportsOutputRefVpc299FDBC5F1838AC11",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "ServiceWithAlarmsService051551D6": {
      "DependsOn": [
        "ServiceWithAlarmsConfigExamplePlainTextParameter8AFE2A31",
        "ServiceWithAlarmsTaskDefinitionTaskRoleDefaultPolicyB2330E9F",
        "ServiceWithAlarmsTaskDefinitionTaskRole36BF926F",
      ],
      "Properties": {
        "Cluster": {
          "Fn::ImportValue": "SupportStack2:ExportsOutputRefCluster2720FF3512E6CDFC3",
        },
        "DeploymentConfiguration": {
          "Alarms": {
            "AlarmNames": [],
            "Enable": false,
            "Rollback": false,
          },
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100,
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "EnableExecuteCommand": true,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "Container",
            "ContainerPort": 8080,
            "TargetGroupArn": {
              "Ref": "ServiceWithAlarmsTargetGroup749DF9C8",
            },
          },
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "ServiceWithAlarmsSecurityGroup6100FE5F",
                  "GroupId",
                ],
              },
            ],
            "Subnets": [
              {
                "Fn::ImportValue": "SupportStack2:ExportsOutputRefVpc2PublicSubnet1Subnet758D49A9A26BB82C",
              },
              {
                "Fn::ImportValue": "SupportStack2:ExportsOutputRefVpc2PublicSubnet2Subnet0BF8C291C2E35B30",
              },
            ],
          },
        },
        "PlatformVersion": "1.4.0",
        "ServiceName": "example-service-alarms",
        "TaskDefinition": {
          "Ref": "ServiceWithAlarmsTaskDefinition7835CB9D",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "ServiceWithAlarmsTargetGroup749DF9C8": {
      "Properties": {
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPath": "/health",
        "HealthyThresholdCount": 2,
        "Port": 8080,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "15",
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "ip",
        "VpcId": {
          "Fn::ImportValue": "SupportStack2:ExportsOutputRefVpc299FDBC5F1838AC11",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "ServiceWithAlarmsTargetHealthAlarmFAAA23B3": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
        "AlarmDescription": "The load balancer is either receiving bad health checks from or is unable to connect to target(s) in ECS service 'example-service-alarms'",
        "AlarmName": "Stack2ServiceWithAlarmsTargetHealthAlarm29CDAFE3",
        "AlarmRule": {
          "Fn::Join": [
            "",
            [
              "(ALARM("",
              {
                "Fn::GetAtt": [
                  "ServiceWithAlarmsConnectionAlarmAE928DBD",
                  "Arn",
                ],
              },
              "") OR ALARM("",
              {
                "Fn::GetAtt": [
                  "ServiceWithAlarmsHealthAlarm243B8FC5",
                  "Arn",
                ],
              },
              ""))",
            ],
          ],
        },
        "OKActions": [
          {
            "Ref": "AlarmTopicD01E77F9",
          },
        ],
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "ServiceWithAlarmsTargetResponseTimeAlarmE90772D9": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "WarningTopicE070F32B",
          },
        ],
        "AlarmDescription": "5% of responses from ECS service 'example-service-alarms' are taking longer than the expected duration of 1 s.",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "LoadBalancer",
            "Value": "load-balancer-placeholder",
          },
          {
            "Name": "TargetGroup",
            "Value": {
              "Fn::GetAtt": [
                "ServiceWithAlarmsTargetGroup749DF9C8",
                "TargetGroupFullName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 1,
        "ExtendedStatistic": "p95",
        "MetricName": "TargetResponseTime",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": [
          {
            "Ref": "WarningTopicE070F32B",
          },
        ],
        "Period": 300,
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceWithAlarmsTaskDefinition7835CB9D": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "SSM_PREFIX",
                "Value": "/liflig-cdk/Stack2/c8267a0b2fd307ab19027a1d7aeaf66a99e5857576/parameters",
              },
              {
                "Name": "PARAMS_HASH",
                "Value": "d750f952f98dcbcb8cac0bf6e1609560cdb5ae0a9551a3dc88ba1c327b685124",
              },
            ],
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Fn::Select": [
                      4,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::ImportValue": "SupportStack2:ExportsOutputFnGetAttRepository25C81E63BArn7946D9F5",
                          },
                        ],
                      },
                    ],
                  },
                  ".dkr.ecr.",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::ImportValue": "SupportStack2:ExportsOutputFnGetAttRepository25C81E63BArn7946D9F5",
                          },
                        ],
                      },
                    ],
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  {
                    "Fn::ImportValue": "SupportStack2:ExportsOutputRefRepository25C81E63BD9B664E4",
                  },
                  ":latest",
                ],
              ],
            },
            "LinuxParameters": {
              "Capabilities": {},
              "InitProcessEnabled": true,
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-datetime-format": "%Y-%m-%dT%H:%M:%S",
                "awslogs-group": {
                  "Ref": "ServiceWithAlarmsLogGroup4EAFA347",
                },
                "awslogs-region": "eu-west-1",
                "awslogs-stream-prefix": "ecs",
                "mode": "blocking",
              },
            },
            "Name": "Container",
            "PortMappings": [
              {
                "ContainerPort": 8080,
                "HostPort": 8080,
                "Protocol": "tcp",
              },
            ],
          },
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "ServiceWithAlarmsTaskDefinitionExecutionRoleB2A6D19C",
            "Arn",
          ],
        },
        "Family": "Stack2ServiceWithAlarmsTaskDefinition102C3D77",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "ServiceWithAlarmsTaskDefinitionTaskRole36BF926F",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "ServiceWithAlarmsTaskDefinitionExecutionRoleB2A6D19C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "ServiceWithAlarmsTaskDefinitionExecutionRoleDefaultPolicy2D0EBD17": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::ImportValue": "SupportStack2:ExportsOutputFnGetAttRepository25C81E63BArn7946D9F5",
              },
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ServiceWithAlarmsLogGroup4EAFA347",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ServiceWithAlarmsTaskDefinitionExecutionRoleDefaultPolicy2D0EBD17",
        "Roles": [
          {
            "Ref": "ServiceWithAlarmsTaskDefinitionExecutionRoleB2A6D19C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ServiceWithAlarmsTaskDefinitionTaskRole36BF926F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "ServiceWithAlarmsTaskDefinitionTaskRoleDefaultPolicyB2330E9F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/liflig-cdk/Stack2/c8267a0b2fd307ab19027a1d7aeaf66a99e5857576/parameters/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssmmessages:CreateControlChannel",
                "ssmmessages:CreateDataChannel",
                "ssmmessages:OpenControlChannel",
                "ssmmessages:OpenDataChannel",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "logs:DescribeLogGroups",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:DescribeLogStreams",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ServiceWithAlarmsTaskDefinitionTaskRoleDefaultPolicyB2330E9F",
        "Roles": [
          {
            "Ref": "ServiceWithAlarmsTaskDefinitionTaskRole36BF926F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "WarningTopicE070F32B": {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`creates fargate service with parameters and listener rule 1`] = `
{
  "Resources": {
    "DnsARecordFED6ED67": {
      "Properties": {
        "AliasTarget": {
          "DNSName": {
            "Fn::Join": [
              "",
              [
                "dualstack.",
                {
                  "Fn::ImportValue": "SupportStack:ExportsOutputFnGetAttLoadBalancer8E47CE52DNSName59BE487A",
                },
              ],
            ],
          },
          "HostedZoneId": {
            "Fn::ImportValue": "SupportStack:ExportsOutputFnGetAttLoadBalancer8E47CE52CanonicalHostedZoneID7C0E7DD7",
          },
        },
        "HostedZoneId": {
          "Fn::ImportValue": "SupportStack:ExportsOutputRefHostedZoneDB99F8662BBAE844",
        },
        "Name": "example.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DnsListenerRule18B182CC": {
      "Properties": {
        "Actions": [
          {
            "TargetGroupArn": {
              "Ref": "ServiceTargetGroupE74A3394",
            },
            "Type": "forward",
          },
        ],
        "Conditions": [
          {
            "Field": "host-header",
            "HostHeaderConfig": {
              "Values": [
                "example.com",
              ],
            },
          },
        ],
        "ListenerArn": {
          "Fn::ImportValue": "SupportStack:ExportsOutputRefLoadBalancerHttpsListener68D81C9458BEEF85",
        },
        "Priority": 10,
      },
      "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
    },
    "Service9571FDD8": {
      "DependsOn": [
        "DnsListenerRule18B182CC",
        "ServiceConfigExamplePlainTextParameterC948638B",
        "ServiceSecretExampleSecretByNameParameterB153ADD4",
        "ServiceSecretExampleSecretParameter2147C87C",
        "ServiceTaskDefinitionTaskRoleDefaultPolicyED991BA3",
        "ServiceTaskDefinitionTaskRole3BD32B0F",
      ],
      "Properties": {
        "Cluster": {
          "Fn::ImportValue": "SupportStack:ExportsOutputRefClusterEB0386A796A0E3FE",
        },
        "DeploymentConfiguration": {
          "Alarms": {
            "AlarmNames": [],
            "Enable": false,
            "Rollback": false,
          },
          "DeploymentCircuitBreaker": {
            "Enable": true,
            "Rollback": true,
          },
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100,
        },
        "DesiredCount": 2,
        "EnableECSManagedTags": false,
        "EnableExecuteCommand": true,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "Container",
            "ContainerPort": 8080,
            "TargetGroupArn": {
              "Ref": "ServiceTargetGroupE74A3394",
            },
          },
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "ServiceSecurityGroupC96ED6A7",
                  "GroupId",
                ],
              },
            ],
            "Subnets": [
              {
                "Fn::ImportValue": "SupportStack:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456",
              },
              {
                "Fn::ImportValue": "SupportStack:ExportsOutputRefVpcPublicSubnet2Subnet691E08A351552740",
              },
            ],
          },
        },
        "PlatformVersion": "1.4.0",
        "ServiceName": "example-service",
        "TaskDefinition": {
          "Ref": "ServiceTaskDefinition55FA0F15",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "ServiceConfigExamplePlainTextParameterC948638B": {
      "Properties": {
        "Name": "/liflig-cdk/Stack/c8cabff989df74f9b2755f4ae923cc6492f944970b/parameters/config/ExamplePlainTextParameter",
        "Type": "String",
        "Value": "ExamplePlainTextParameter",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "ServiceLogGroupB910EE76": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "ServiceSecretExampleSecretByNameParameterB153ADD4": {
      "Properties": {
        "Name": "/liflig-cdk/Stack/c8cabff989df74f9b2755f4ae923cc6492f944970b/parameters/secrets/ExampleSecretByNameParameter",
        "Type": "String",
        "Value": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":secretsmanager:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":secret:ExampleSecretByNameParameter",
            ],
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "ServiceSecretExampleSecretParameter2147C87C": {
      "Properties": {
        "Name": "/liflig-cdk/Stack/c8cabff989df74f9b2755f4ae923cc6492f944970b/parameters/secrets/ExampleSecretParameter",
        "Type": "String",
        "Value": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":secretsmanager:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":secret:ExampleSecretParameter",
            ],
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "ServiceSecurityGroupC96ED6A7": {
      "Properties": {
        "GroupDescription": "Stack/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Fn::ImportValue": "SupportStack:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "ServiceSecurityGroupSupportStackLoadBalancerSecurityGroup43D42DD38080from8AFD9D71": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "ServiceSecurityGroupC96ED6A7",
            "GroupId",
          ],
        },
        "FromPort": 8080,
        "GroupId": {
          "Fn::ImportValue": "SupportStack:ExportsOutputFnGetAttLoadBalancerSecurityGroupC89CA14BGroupId6F8F4447",
        },
        "IpProtocol": "tcp",
        "ToPort": 8080,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ServiceSecurityGroupfromSupportStackLoadBalancerSecurityGroup43D42DD3808010A4CCEF": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 8080,
        "GroupId": {
          "Fn::GetAtt": [
            "ServiceSecurityGroupC96ED6A7",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::ImportValue": "SupportStack:ExportsOutputFnGetAttLoadBalancerSecurityGroupC89CA14BGroupId6F8F4447",
        },
        "ToPort": 8080,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "ServiceTargetGroupE74A3394": {
      "Properties": {
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPath": "/health",
        "HealthyThresholdCount": 2,
        "Port": 8080,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "15",
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "ip",
        "VpcId": {
          "Fn::ImportValue": "SupportStack:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "ServiceTaskDefinition55FA0F15": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "SSM_PREFIX",
                "Value": "/liflig-cdk/Stack/c8cabff989df74f9b2755f4ae923cc6492f944970b/parameters",
              },
              {
                "Name": "PARAMS_HASH",
                "Value": "90fa2bdb2b8eb3d9ec2b313224ba0c78d3905bd65f6d1bc6427158370196cdb8",
              },
            ],
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Fn::Select": [
                      4,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::ImportValue": "SupportStack:ExportsOutputFnGetAttRepository22E53BBDArn3AD4E30B",
                          },
                        ],
                      },
                    ],
                  },
                  ".dkr.ecr.",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::ImportValue": "SupportStack:ExportsOutputFnGetAttRepository22E53BBDArn3AD4E30B",
                          },
                        ],
                      },
                    ],
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  {
                    "Fn::ImportValue": "SupportStack:ExportsOutputRefRepository22E53BBD9A9E013B",
                  },
                  ":exampleEcrTag",
                ],
              ],
            },
            "LinuxParameters": {
              "Capabilities": {},
              "InitProcessEnabled": true,
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-datetime-format": "%Y-%m-%dT%H:%M:%S",
                "awslogs-group": {
                  "Ref": "ServiceLogGroupB910EE76",
                },
                "awslogs-region": "eu-west-1",
                "awslogs-stream-prefix": "ecs",
                "mode": "blocking",
              },
            },
            "Name": "Container",
            "PortMappings": [
              {
                "ContainerPort": 8080,
                "HostPort": 8080,
                "Protocol": "tcp",
              },
            ],
          },
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "ServiceTaskDefinitionExecutionRole5D3DB197",
            "Arn",
          ],
        },
        "Family": "StackServiceTaskDefinition81B5CCD5",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "ServiceTaskDefinitionTaskRole3BD32B0F",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "ServiceTaskDefinitionExecutionRole5D3DB197": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "ServiceTaskDefinitionExecutionRoleDefaultPolicyE16C69DE": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::ImportValue": "SupportStack:ExportsOutputFnGetAttRepository22E53BBDArn3AD4E30B",
              },
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ServiceLogGroupB910EE76",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ServiceTaskDefinitionExecutionRoleDefaultPolicyE16C69DE",
        "Roles": [
          {
            "Ref": "ServiceTaskDefinitionExecutionRole5D3DB197",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ServiceTaskDefinitionTaskRole3BD32B0F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "ServiceTaskDefinitionTaskRoleDefaultPolicyED991BA3": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/liflig-cdk/Stack/c8cabff989df74f9b2755f4ae923cc6492f944970b/parameters/*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:ExampleSecretParameter-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:ExampleSecretByNameParameter-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssmmessages:CreateControlChannel",
                "ssmmessages:CreateDataChannel",
                "ssmmessages:OpenControlChannel",
                "ssmmessages:OpenDataChannel",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "logs:DescribeLogGroups",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:DescribeLogStreams",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ServiceTaskDefinitionTaskRoleDefaultPolicyED991BA3",
        "Roles": [
          {
            "Ref": "ServiceTaskDefinitionTaskRole3BD32B0F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
